Evo: fix overflow

--- a/src/components/app-home/app-home.css
+++ b/src/components/app-home/app-home.css
@@ -1,7 +1,10 @@
 #map,#mapHistoryDetails {
-    width: 100%;
-    height: 100%;
-    flex: 1;
+    position: absolute;
+    top: 30px;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .inset-modal .modal-wrapper {
